--- a/styles/main.css
+++ b/styles/main.css
@@ -13,12 +13,14 @@
 *, *::after, *::before {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: 'Yaldevi', sans-serif;
     line-height: 1.5;
     background-color: #FFFFFF;
+    overflow-x: hidden;
 }
 
 a {
@@ -69,10 +71,10 @@ nav {
 }
 
 .navbar {
-    margin-right: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 80px;
 }
 
 .navbar .logo {
@@ -85,12 +87,12 @@ nav {
     font-size: 1.7rem;
 }
 
-.navbar .sidebar-toggle {
+.navbar #sidebar-toggle {
     width: 60px;
     height: 60px;
 }
 
-.navbar .sidebar-toggle .fa-bars {
+.navbar #sidebar-toggle .fa {
     position: relative;
     top: 5%;
     left: 10%;
@@ -98,19 +100,68 @@ nav {
     color: var(--primary-color);
 }
 
+/* Sidebar */
+#sidebar {
+    position: absolute;
+    width: 160px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    right: -160px;
+    padding: 0 10px;
+    background-color: var(--light-color);
+    transition: right 0.5s ease;
+}
+
+#sidebar .page-links ul {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+#sidebar .page-links ul li {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+
+#sidebar .page-links ul li a {
+    color: var(--accent-color);
+    font-size: 1.5rem;
+    font-family: 'Yellowtail', sans-serif;
+    transition: text-decoration 0.25s ease-out;
+}
+
+#sidebar .page-links ul li a:hover {
+    text-decoration: wavy underline var(--accent-color) 1px;
+}
+
+#sidebar .page-links ul li .page-img {
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
 /* Utility Classes */
 .btn {
     display: inline-block;
     text-align: center;
     font-size: 1.3rem;
-    height: 24px;
-    padding: 10px;
+    height: 2rem;
+    padding: 0 10px;
     border-radius: 3px;
     margin: 3px;
     background-color: var(--secondary-color);
+    color: var(--light-color);
+    cursor: pointer;
 }
 
-.btn:hover a {
+.btn:hover {
     color: var(--text-color);
 }
 
@@ -137,6 +188,7 @@ nav {
     padding: 0 1.5rem;
     background-color: var(--text-color);
     color: var(--primary-color);
+    margin-top: 2rem;
 }
 
 .footer a {
