--- a/styles/main.css
+++ b/styles/main.css
@@ -103,17 +103,22 @@ nav {
 /* Sidebar */
 #sidebar {
     position: absolute;
-    width: 160px;
-    height: 100%;
+    width: 10rem;
+    height: fit-content;
+    margin-right: 1rem;
+    margin-top: 10px;
     display: flex;
+    visibility: hidden;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     z-index: 1;
-    right: -160px;
+    right: -11rem;
     padding: 0 10px;
     background-color: var(--light-color);
-    transition: right 0.5s ease;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: right 0.5s ease-in-out, visibility 0.5s ease-in-out;
 }
 
 #sidebar .page-links ul {
@@ -122,6 +127,7 @@ nav {
     align-items: flex-start;
     flex-direction: column;
     gap: 1rem;
+    margin: 1rem 0;
 }
 
 #sidebar .page-links ul li {
