--- a/styles/about.css
+++ b/styles/about.css
@@ -3,7 +3,8 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-evenly;
+    min-height: 80vh;
     gap: 2rem;
     color: var(--primary-color);
 }
@@ -13,6 +14,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 80%;
     gap: 1rem;
     padding: 0 2rem;
 }
@@ -54,5 +56,6 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 80%;
     gap: 1rem;
 }
