--- a/styles/menu.css
+++ b/styles/menu.css
@@ -197,14 +197,13 @@ main {
 }
 
 .menu #items .item {
-    height: 240px;
     width: 180px;
     background-color: var(--primary-color);
     color: var(--text-color);
     border-radius: 8px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     gap: 5px;
     padding-bottom: 1rem;
